# xorg__app__xoo

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  xoo.doap
data/: Makefile.am  Xoo.glade  generic.xml  ipaq3800.xml  ipaq4700.xml  matchbox-nest.glade  nokia-770.xml  nokia-n800.xml  org.x.Xoo.gschema.xml  xoo.convert  xoo.desktop  xoo.ui
src/: Makefile.am  button.c  callbacks.c  callbacks.h  config.c  fakedev.h  keys.c  main.c  prefs.c  prefs.h
website/: default.css  index.html
