IPAQ = ipaq3800.xml ipaq3800.png
N770 = nokia-770.xml nokia-770.png

EXTRA_DIST = $(IPAQ) $(N770) dot.png Xoo.glade xoo.desktop xoo.png

devicedir = $(pkgdatadir)
device_DATA = dot.png $(IPAQ) $(N770)

uidir = $(pkgdatadir)
ui_DATA = Xoo.glade

desktopdir = $(datadir)/applications
desktop_DATA = xoo.desktop

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = xoo.png
